--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ pandas>=1.5.0
 numpy>=1.24.0
 scipy>=1.10.0
 plotly>=5.15.0
-matplotlib>=3.6.0 
+matplotlib>=3.6.0
+chardet>=5.0.0
+xlsxwriter>=3.0.0 
